# python-fastrtc-talk-with-ai-example

./: .gitignore  README.md  dev.sh
backend/: .env.sample  pyproject.toml  run.sh
backend/app/: __init__.py  config.py  main.py  stream.py
backend/app/services/: __init__.py  llm.py  stt.py  tts.py
backend/tests/: TEST_PERSPECTIVES.md  conftest.py  test_config.py  test_services_llm.py  test_services_stt.py  test_services_tts.py
docs/: backend-sequence.md  frontend-screens.md  requirements.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AudioDeviceSelector.tsx  AudioOutput.tsx  AudioWaveform.tsx  ChatUI.tsx  ConnectButton.tsx  ConnectionStatus.tsx  DisconnectButton.tsx  Header.tsx  MicrophoneStatus.tsx  Modal.tsx
frontend/src/components/__tests__/: ConnectButton.test.tsx  ConnectionStatus.test.tsx  Header.test.tsx
frontend/src/hooks/: useAudioDevices.ts  useAudioWaveform.ts  useOutputStream.ts  useWebRTC.ts
